files/iptables
*filter
:INPUT     DROP     [0:0]
:FORWARD   DROP     [0:0]
:OUTPUT    ACCEPT   [0:0]
:SERVICES  -        [0:0]
-A INPUT -i lo -j ACCEPT
--A OUTPUT -p udp -s YOUR-DOMAIN --dport 53 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPTA INPUT -p icmp --icmp-type echo-request -m limit --limit 1/s --limit-burst 4 -j ACCEPT
-A INPUT -p tcp -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p tcp -m state --state NEW -j SERVICES
-A INPUT -p udp --sport 123 --dport 123 -j ACCEPT
-A SERVICES -p tcp --dport 6636 -j ACCEPT
-A SERVICES -p tcp --dport 80 -j ACCEPT
-A SERVICES -p tcp --dport 443 -j ACCEPT
COMMIT
